tests/ui/feature-gates/feature-gate-precise_capturing_in_traits.stderr
error: `use<...>` precise capturing syntax is currently not allowed in return-position `impl Trait` in traits
  --> $DIR/feature-gate-precise_capturing_in_traits.rs:2:31
   |
LL |     fn test() -> impl Sized + use<Self>;
   |                               ^^^^^^^^^
   |
   = note: currently, return-position `impl Trait` in traits and trait implementations capture all lifetimes in scope
   = note: see issue #130044 <https://github.com/rust-lang/rust/issues/130044> for more information
   = help: add `#![feature(precise_capturing_in_traits)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

